Added extra debug console reporting

--- a/App.config
+++ b/App.config
@@ -41,10 +41,10 @@
                 <value>"$song" - $artist</value>
             </setting>
             <setting name="defaultBrowser" serializeAs="String">
-                <value>Chrome</value>
+                <value>Opera</value>
             </setting>
             <setting name="browser" serializeAs="String">
-                <value>Chrome</value>
+                <value>Opera</value>
             </setting>
         </SnipForMammal.Properties.Settings>
     </userSettings>
