--- a/SnipForMammal.csproj
+++ b/SnipForMammal.csproj
@@ -53,7 +53,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>96x96.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -108,9 +109,11 @@
     </Compile>
     <EmbeddedResource Include="CustomTextEntryForm.resx">
       <DependentUpon>CustomTextEntryForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="DebugConsole.resx">
       <DependentUpon>DebugConsole.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
@@ -119,13 +122,14 @@
       <DependentUpon>SnipForMammal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include=".editorconfig" />
     <None Include="Properties\Settings.settings">
@@ -142,8 +146,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="96x96.ico" />
-    <Content Include="dancingbanana.gif" />
+    <None Include="Resources\dancingbanana.gif" />
+    <None Include="Resources\Icons\112x112.ico" />
+    <None Include="Resources\Icons\48x48.ico" />
+    <None Include="Resources\Icons\32x32.ico" />
+    <None Include="Resources\Icons\96x96.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
