--- a/SnipForMammal.csproj
+++ b/SnipForMammal.csproj
@@ -82,13 +82,8 @@
     <Compile Include="CustomTextEntryForm.Designer.cs">
       <DependentUpon>CustomTextEntryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DebugConsole.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DebugConsole.Designer.cs">
-      <DependentUpon>DebugConsole.cs</DependentUpon>
-    </Compile>
     <Compile Include="Global.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,10 +109,6 @@
     </Compile>
     <EmbeddedResource Include="CustomTextEntryForm.resx">
       <DependentUpon>CustomTextEntryForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DebugConsole.resx">
-      <DependentUpon>DebugConsole.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
